<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:backgroundTint="@color/black"
    tools:context=".ui.main.CommentsFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/comments"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/cancel"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:src="@drawable/ic_baseline_cancel_24" />

            <TextView
                android:id="@+id/warning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/comment"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/remember_to_keep_comments_respectful"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/warning"
                android:clipToPadding="false"
                android:scrollbars="horizontal" />
        </RelativeLayout>
        <ProgressBar
            android:id="@+id/avi"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:padding="12dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            >
            <androidx.cardview.widget.CardView
                android:id="@+id/card_view"
                android:backgroundTint="@color/black"
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:elevation="14dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="@color/full_transparent"
                xmlns:app="http://schemas.android.com/apk/res-auto">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:hint="@string/name"
                        android:textColorHint="@color/white"
                        android:textColor="@color/white"
                        android:id="@+id/name"
                        android:inputType="text"
                        android:background="@drawable/rounded_edittext"
                        />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:hint="@string/email"
                        android:textColorHint="@color/white"
                        android:textColor="@color/white"
                        android:id="@+id/email"
                        android:inputType="textEmailAddress"
                        android:background="@drawable/rounded_edittext"
                        />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:hint="@string/add_comment"
                        android:textColorHint="@color/white"
                        android:textColor="@color/white"
                        android:id="@+id/comments"
                        android:inputType="text"
                        android:background="@drawable/rounded_edittext"
                        />
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textColor="@color/white"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp"
                        android:backgroundTint="@color/red"
                        android:text="Post"

                        />



                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>